make some small line corrects and alignment: center for textArea

--- a/gui/src/main/resources/css/main.css
+++ b/gui/src/main/resources/css/main.css
@@ -39,3 +39,7 @@
 }
 .radio-button .radio{
 }
+.text-area *.text {
+    -fx-text-alignment: center;
+}
+
